# gst-plugins-bebo

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.TXT  README.md  bebo-capture.sln  deploy.rb  gst-to-dshow.sln  jenkins_build.cmd
bebo-capture-svc/: BeboCapture.vcxproj  Capture.h  CapturePin.cpp  GameCapture.cpp  setup.cpp
cmake/: DownloadDependency.cmake  DownloadZip.cmake  FindD3D11.cmake
direct_show/gst-to-dshow-filter/: Capture.h  CapturePin.cpp  CapturePinAccessories.cpp  DibHelper.cpp  DibHelper.h  allocator.h  gst-to-dshow-filter.filters  gst-to-dshow-filter.vcxproj  setup.cpp
get-graphics-offsets/: get-graphics-offsets.vcxproj
graphics-hook/: graphics-hook.vcxproj
gst/: CMakeLists.txt  gstbeboplugin.c
gst-bebo-sink/: config.h  gst-bebo-sink.vcxproj  gstshm.c  gstshmsink.c  gstshmsink.h
gst-dshowfiltersink/: config.h  dshowvideosink.cpp  gst-bebo-sink.vcxproj  gst-dshowfiltersink.vcxproj  gstdshowfilter.c  gstdshowsink.c  gstdshowsink.h  gstdxgimemory.c  gstdxgimemory.h  gstshmsink.h  my-vidmem.c  my-vidmem.h
gst-libs/gst/dxgi/: dxgi.h  dxgicontext.c  dxgicontext.h  dxgidisplay.c  dxgidisplay.h  gstdxgi.h  gstdxgibasefilter.c  gstdxgibasefilter.h  gstdxgicontext.c  gstdxgicontext.h  gstdxgidevice.c  gstdxgidevice.h  gstdxgidevice_base.c  gstdxgidevice_base.h  gstdxgidevice_d3d12.c  gstdxgidevice_d3d12.h  gstdxgidevice_interop.c  gstdxgidevice_interop.h  gstdxgimemory.c  gstdxgimemory.h
gst-libs/gst/dxgi/d3d12/: dxgidisplay_d3d12.c  dxgidisplay_d3d12.h
gst-to-dshow-filter/: BeboCapture.vcxproj  BeboCaptureGuids.h  Capture.h  Capture.rc  CaptureGuids.h  CapturePin.cpp  CapturePinAccessories.cpp  DibHelper.cpp  Logging.cpp  PushSourceFilters_h.h  allocator.cpp  allocator.h  gst-to-dshow-filter.vcxproj  gst-to-dshow.def  names_and_ids.h  setup.cpp
gst/bebosquisher/: gstglbasemixer.c  gstglbasemixer.h  gstglmixer.c  gstglmixer.h  gstglmixerbin.c  gstglmixerbin.h  gstglstereomix.c  gstglstereomix.h  gstglvideomixer.c  gstglvideomixer.h  gstopengl.c
gst/bufferholder/: gstbufferholder.c  gstbufferholder.h
gst/dshowfiltersink/: CMakeLists.txt  gstdshowfilter.c  gstdshowsink.c  gstdshowsink.h
gst/dxgi/: gstdxgidownloadelement.c  gstdxgidownloadelement.h
gst/gl2dxgi/: gstgl2dxgi.c  gstgl2dxgi.h
gst/noisegate/: gstaudionoisegate.c  gstaudionoisegate.h
gst/noisesuppression/: gstaudionoisesuppression.c  gstaudionoisesuppression.h
gst/nvenc/: CMakeLists.txt  config.h  gstnvbaseenc.c  gstnvbaseenc.h  gstnvenc.c  gstnvenc.h  gstnvh264enc.c  gstnvh264enc.h
inject-helper/: inject-helper.vcxproj
nacl-preview/: CMakeLists.txt  README.md  lru_cache.h  preview.cc
proxy-dll/: IBeboCapture_h.h  proxy-dll.vcxproj
shared/: bebo_shmem.h  config.h  shared.vcxitems
util/: util.vcxproj
